--- a/config.json
+++ b/config.json
@@ -6,13 +6,14 @@
   ],
   "background":[
     "Software Engineer",
-    "Front-end",
+    "Java (First Language)",
+    "HTML/CSS 13 years",
     "Javascript 4 year",
     "jQuery 2 years",
-    "HTML 13 years",
-    "CSS 13 years",
     "React 1 year",
-    "Laravel PHP Framework 2 years"
+    "Codeigniter 6 months",
+    "Laravel PHP Framework 2 years",
+    "Git"
   ],
   "interests":[
     "Webpack",
