--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "username": "sirwhite2",
   "name": "Afia Udofia",
   "projects": [
-    "http://github.com/sirwhite2/profiles"
+    "http://github.com/afiaudofia/profiles"
   ],
   "background":[
     "Software Engineer",
@@ -24,5 +24,5 @@
     "Remote Gigs/Jobs"
   ],
   "twitter": "http://twitter.com/afiaudofia",
-  "github": "http://github.com/sirwhite2"
+  "github": "http://github.com/afiaudofia"
 }
